fix:message was saved twice in db

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "cra-template": "1.2.0",
     "firebase": "^11.2.0",
     "lottie-react": "^2.4.1",
+    "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
