--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,45 +1,40 @@
 {
-  "name": "w-clone",
-  "version": "0.1.0",
+  "name": "package.json",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.5.1",
-    "axios": "^1.7.9",
-    "cra-template": "1.2.0",
-    "firebase": "^11.2.0",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.3",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.4.0",
     "lottie-react": "^2.4.1",
     "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.3",
-    "sass": "^1.83.4",
+    "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
+    "redux": "^5.0.1",
+    "sass": "^1.85.1",
     "socket.io-client": "^4.8.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
