--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.2",
     "firebase": "^11.4.0",
     "lottie-react": "^2.4.1",
     "moment-timezone": "^0.5.47",
