feat:name n about update

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,4 @@ VITE_FIREBASE_PROJECT_ID=chat-app-d39cf
 VITE_FIREBASE_STORAGE_BUCKET=chat-app-d39cf.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=125695602755
 VITE_FIREBASE_APP_ID=1:125695602755:web:4d690e7f2558e2c0d3a4f6
+VITE_BASE_URL=http://localhost:5001
