--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-insta-stories": "^2.8.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
